--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
             "sequence": [
                 "workbench.action.files.saveAll",
                 // "workbench.action.terminal.focus",
-                {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make all \u000D"}}
+                {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make py \u000D"}}
             ],
         },
         {
@@ -20,7 +20,7 @@
             "sequence": [
                 "workbench.action.files.saveAll",
                 // "workbench.action.terminal.focus",
-                {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make doxy \u000D"}}
+                {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make rust \u000D"}}
             ],
         },
     ],
