--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,20 +7,20 @@
     "multiCommand.commands": [
         {
             // configure recommendation: bind F12 key on this command for handy projects rebuild/run
-            "command": "multiCommand.build",
-            "sequence": [
-                "workbench.action.files.saveAll",
-                // "workbench.action.terminal.focus",
-                {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make py \u000D"}}
-            ],
-        },
-        {
-            // configure recommendation: bind F11 key on this command for doxygen run
-            "command": "multiCommand.doxy",
+            "command": "multiCommand.f12",
             "sequence": [
                 "workbench.action.files.saveAll",
                 // "workbench.action.terminal.focus",
                 {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make rust \u000D"}}
+            ],
+        },
+        {
+            // configure recommendation: bind F11 key on this command for doxygen run
+            "command": "multiCommand.f11",
+            "sequence": [
+                "workbench.action.files.saveAll",
+                // "workbench.action.terminal.focus",
+                {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make py \u000D"}}
             ],
         },
     ],
@@ -28,19 +28,20 @@
     // ignore large files for VSCode sync
     "files.watcherExclude": {
         "**/bin/**": true, "**/include/**":true, "**/lib*/**":true, "**/share/**":true,
-        "**/*.pyc": true, "**/docs/**":true,
+        "**/*.pyc": true, "**/docs/**":true, "**/*cache*/**": true,
+        "**/target/**":true,
     },
 
     "files.exclude": {
         "bin": true, "include":true, "lib*":true, "share":true, "pyvenv.cfg":true,
-        "**/*.pyc": true, "**/docs/**":true,
+        "**/*.pyc": true, "**/docs/**":true, "**/*cache*/**": true,
+        "**/target/**":true,
     },
 
     "editor.tabSize": 4,
 
     "files.associations": {
-        "**/templates/*.html": "django-html",
-        "**/templates/*": "django-txt",
+        // "*.html": "jinja-html",
         "**/requirements{/**,*}.{txt,in}": "pip-requirements"
     },
 }
