--- a/kb.ini
+++ b/kb.ini
@@ -1,16 +1,30 @@
 # line comment
 
-MODULE  =   kb
+MODULE  =   `kb
 TITLE   =   'Knowledge Base engine /multilingual/'
-AUTHOR  =   [ 'Dmitry Ponyatov' { email: dponyatov@gmail.com } ]
-LICENCE =   MIT
+AUTHOR  =   'Dmitry Ponyatov' << dponyatov@gmail.com
+LICENCE =   `MIT
 GOTHUB  =   https://github.com/ponyatov/kb
-LOGO    =   static/logo.png
+LOGO    =   file:static/logo.png
+
+IP   = 127.0.0.1
+PORT = port:12345
+
+WEB:vm
+
+
+vm  # print global virtual machine
+
+# metaL code samples: [meta]programming [L]anguage
+
+`symbol
+
+`Hello // `World << `left >> `right
+
+numbers [ -01 +02.30 -4e+5 0xDeadBeef 0b1101 ]
 
 .end
 
-metaL code samples: [meta]programming [L]anguage
 
 symbols [ any non-space char groups ]
 
-numbers { -01 +02.30 -4e+5 0xDeadBeef 0b1101 }
