--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==19.3.0
 autopep8==1.5.1
 click==7.1.1
 Flask==1.1.2
+Flask-WTF==0.14.3
 importlib-metadata==1.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -24,4 +25,5 @@ typed-ast==1.4.1
 wcwidth==0.1.9
 Werkzeug==1.0.1
 wrapt==1.11.2
+WTForms==2.2.1
 zipp==3.1.0
